Add balanced fine-tune, K-fold CV, and active learning
Introduces balanced fine-tuning for the autoencoder to prevent catastrophic forgetting, K-fold cross-validation for threshold selection, an active-learning hook to save borderline candidates, and telemetry capture for training statistics. Also overrides the pretrain AE threshold to the 95th percentile and ensures user report data is available for fusion grid-search.

--- a/Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
+++ b/Pre_Train_and_Fine_Tune_AE_+_GCN.ipynb
@@ -839,6 +839,43 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Override pretrain AE threshold to 95th percentile (was 99th percentile) — quick fix per request\n",
+        "import numpy as np\n",
+        "try:\n",
+        "    if 'pretrain_val_error' in globals():\n",
+        "        pretrain_ae_threshold = float(np.percentile(pretrain_val_error, 95.0))\n",
+        "    else:\n",
+        "        # compute from current AE and public benign validation if available\n",
+        "        if 'ae_model' in globals() and 'X_val_s' in globals():\n",
+        "            try:\n",
+        "                recon = ae_model.predict(X_val_s[y_val==0], verbose=0)\n",
+        "                errors = np.mean((recon - X_val_s[y_val==0])**2, axis=1)\n",
+        "                pretrain_ae_threshold = float(np.percentile(errors, 95.0))\n",
+        "            except Exception as e:\n",
+        "                print('Could not compute pretrain_val_error:', e)\n",
+        "                pretrain_ae_threshold = None\n",
+        "        else:\n",
+        "            pretrain_ae_threshold = None\n",
+        "    if pretrain_ae_threshold is not None:\n",
+        "        print('Set pretrain_ae_threshold to 95th percentile =', pretrain_ae_threshold)\n",
+        "        try:\n",
+        "            with open('pretrain_ae_threshold.txt','w') as f:\n",
+        "                f.write(str(pretrain_ae_threshold))\n",
+        "        except Exception:\n",
+        "            pass\n",
+        "    else:\n",
+        "        print('pretrain_ae_threshold not set (missing data)')\n",
+        "except Exception as e:\n",
+        "    print('Error overriding pretrain threshold:', e)\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Td5pMqKDTLNa"
@@ -1072,6 +1109,273 @@
         "    # Create empty placeholders if there isn't enough data\n",
         "    X_user_train_s, X_user_val_s, X_user_test_s = [np.array([]) for _ in range(3)]\n",
         "    y_user_train, y_user_val, y_user_test = [np.array([]) for _ in range(3)]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# === Balanced fine-tune + K-fold CV threshold selection + Active-learning hook + Telemetry ===\n",
+        "import numpy as np\n",
+        "from sklearn.model_selection import StratifiedKFold\n",
+        "from sklearn.metrics import precision_recall_curve, f1_score, precision_score, recall_score\n",
+        "import time, json, csv\n",
+        "\n",
+        "# Parameters\n",
+        "K_FOLDS = 5\n",
+        "RECALL_TARGET = float(os.environ.get('AE_THRESHOLD_RECALL_TARGET', '0.25'))\n",
+        "USER_WEIGHT = float(os.environ.get('AE_USER_WEIGHT', '5.0'))\n",
+        "PHISH_SAMPLE_MAX = int(os.environ.get('PHISH_SAMPLE_MAX', '500'))\n",
+        "\n",
+        "print('Running balanced fine-tune + K-fold thresholding (K=%d) ...' % K_FOLDS)\n",
+        "\n",
+        "# --- Balanced fine-tune to avoid catastrophic forgetting ---\n",
+        "# Collect user benign URLs (label==0) if present\n",
+        "user_benign_urls = []\n",
+        "if 'df_user' in globals() and not df_user.empty:\n",
+        "    try:\n",
+        "        user_benign_urls = df_user[df_user['label']==0]['url'].dropna().unique().tolist()\n",
+        "    except Exception:\n",
+        "        user_benign_urls = []\n",
+        "\n",
+        "# Sample phishing examples from public dataset\n",
+        "phish_indices = np.where(y_public == 1)[0] if 'y_public' in globals() else np.array([])\n",
+        "phish_sample_idx = phish_indices\n",
+        "if phish_indices.size > PHISH_SAMPLE_MAX:\n",
+        "    rng = np.random.RandomState(SEED)\n",
+        "    phish_sample_idx = rng.choice(phish_indices, size=PHISH_SAMPLE_MAX, replace=False)\n",
+        "\n",
+        "# Build features for balanced fine-tune\n",
+        "X_bal = []\n",
+        "sw = []\n",
+        "if len(user_benign_urls) > 0:\n",
+        "    # user benign features\n",
+        "    for u in user_benign_urls:\n",
+        "        try:\n",
+        "            feat = features_for_url(u)\n",
+        "            X_bal.append(feat)\n",
+        "            sw.append(USER_WEIGHT)\n",
+        "        except Exception:\n",
+        "            pass\n",
+        "\n",
+        "# add sampled phishing public examples (use public X_public rows corresponding to indices)\n",
+        "if phish_sample_idx is not None and len(phish_sample_idx) > 0 and 'X_public' in globals():\n",
+        "    # Use the numeric X_public directly (it matches feature_cols)\n",
+        "    for idx in phish_sample_idx:\n",
+        "        try:\n",
+        "            X_bal.append(X_public.iloc[idx].values.astype(np.float32))\n",
+        "            sw.append(1.0)\n",
+        "        except Exception:\n",
+        "            pass\n",
+        "\n",
+        "if len(X_bal) > 0:\n",
+        "    X_bal = np.vstack(X_bal)\n",
+        "    try:\n",
+        "        X_bal_s = scaler.transform(X_bal)\n",
+        "        print('Balanced fine-tune dataset:', X_bal_s.shape, ' (user_benign=%d, phish=%d)' % (len(user_benign_urls), len(phish_sample_idx)))\n",
+        "        # Fine-tune AE to reconstruct inputs but emphasize user-benign via sample_weight\n",
+        "        try:\n",
+        "            ae_model.compile(optimizer=keras.optimizers.Adam(1e-5), loss='mse')\n",
+        "            ae_model.fit(X_bal_s, X_bal_s, sample_weight=np.array(sw), epochs=20, batch_size=32, verbose=1)\n",
+        "            print('✅ Balanced fine-tune complete')\n",
+        "        except Exception as e:\n",
+        "            print('Balanced fine-tune failed:', e)\n",
+        "    except Exception as e:\n",
+        "        print('Could not scale balanced dataset:', e)\n",
+        "else:\n",
+        "    print('No balanced fine-tune data available. Skipping.')\n",
+        "\n",
+        "# --- K-fold CV threshold selection using PR curve per fold ---\n",
+        "# Build labeled URL dataset from df_user\n",
+        "if 'df_user' in globals() and not df_user.empty:\n",
+        "    urls = df_user['url'].values\n",
+        "    labels = df_user['label'].astype(int).values\n",
+        "    n_samples = len(urls)\n",
+        "    if n_samples >= 6:\n",
+        "        k = min(K_FOLDS, n_samples)\n",
+        "        skf = StratifiedKFold(n_splits=k, shuffle=True, random_state=SEED)\n",
+        "        thresholds = []\n",
+        "        fold_stats = []\n",
+        "        for fold, (train_idx, val_idx) in enumerate(skf.split(urls, labels)):\n",
+        "            X_val = np.stack([features_for_url(urls[i]) for i in val_idx])\n",
+        "            X_val_s = scaler.transform(X_val)\n",
+        "            # compute AE errors on validation fold\n",
+        "            recon = ae_model.predict(X_val_s, verbose=0)\n",
+        "            errors = np.mean((recon - X_val_s)**2, axis=1)\n",
+        "            # precision-recall curve expects score where larger => positive\n",
+        "            precision, recall, pr_thresholds = precision_recall_curve(labels[val_idx], errors)\n",
+        "            # Find threshold achieving at least RECALL_TARGET with maximum precision\n",
+        "            cand_threshold = None\n",
+        "            cand_prec = -1\n",
+        "            for p, r, t in zip(precision, recall, np.append(pr_thresholds, pr_thresholds[-1] if len(pr_thresholds)>0 else 0)):\n",
+        "                if r >= RECALL_TARGET and p > cand_prec:\n",
+        "                    cand_prec = p\n",
+        "                    cand_threshold = t\n",
+        "            # fallback: choose threshold that maximizes F1 on this fold\n",
+        "            if cand_threshold is None:\n",
+        "                f1s = (2 * precision * recall) / (precision + recall + 1e-12)\n",
+        "                best_i = np.nanargmax(f1s)\n",
+        "                cand_threshold = pr_thresholds[best_i] if len(pr_thresholds)>0 else np.percentile(errors, 95)\n",
+        "            thresholds.append(cand_threshold)\n",
+        "            # record fold stats at chosen threshold\n",
+        "            ypred = (errors > cand_threshold).astype(int)\n",
+        "            f1 = f1_score(labels[val_idx], ypred)\n",
+        "            prec = precision_score(labels[val_idx], ypred, zero_division=0)\n",
+        "            rec = recall_score(labels[val_idx], ypred, zero_division=0)\n",
+        "            fold_stats.append({'fold': fold, 'threshold': float(cand_threshold), 'f1': float(f1), 'precision': float(prec), 'recall': float(rec)})\n",
+        "        # Aggregate thresholds\n",
+        "        thresholds = np.array(thresholds)\n",
+        "        chosen_threshold = float(np.median(thresholds))\n",
+        "        print('K-fold thresholds per fold:', thresholds)\n",
+        "        print('Median chosen threshold:', chosen_threshold)\n",
+        "        # Set ae_threshold (used later) to chosen_threshold\n",
+        "        ae_threshold = chosen_threshold\n",
+        "        try:\n",
+        "            with open('autoencoder_threshold.txt','w') as f:\n",
+        "                f.write(str(ae_threshold))\n",
+        "        except Exception:\n",
+        "            pass\n",
+        "        # Save fold_stats for provenance\n",
+        "        with open('ae_threshold_cv_stats.json','w') as f:\n",
+        "            json.dump({'folds': fold_stats, 'chosen_threshold': ae_threshold, 'recall_target': RECALL_TARGET}, f, indent=2)\n",
+        "        print('Saved ae_threshold_cv_stats.json')\n",
+        "    else:\n",
+        "        print('Not enough user-labeled URLs for K-fold CV thresholding (need >=6). Using existing ae_threshold or pretrain_ae_threshold if available.')\n",
+        "        if 'pretrain_ae_threshold' in globals() and 'ae_threshold' not in globals():\n",
+        "            ae_threshold = pretrain_ae_threshold\n",
+        "else:\n",
+        "    print('df_user missing or empty; skipping K-fold CV threshold selection')\n",
+        "\n",
+        "# --- Active-learning hook: save borderline candidates for review ---\n",
+        "# Borderline definition: fused score between 0.35 and 0.65 OR top-N uncertain\n",
+        "BORDER_LOW= float(os.environ.get('AL_BORDER_LOW','0.35'))\n",
+        "BORDER_HIGH= float(os.environ.get('AL_BORDER_HIGH','0.65'))\n",
+        "AL_FILE = 'active_learning_candidates.csv'\n",
+        "\n",
+        "def add_active_candidates(urls_list, scores_list, reason='borderline'):\n",
+        "    rows = []\n",
+        "    ts = int(time.time())\n",
+        "    for u,s in zip(urls_list, scores_list):\n",
+        "        rows.append([u, float(s), reason, ts])\n",
+        "    # append to CSV\n",
+        "    header = not os.path.exists(AL_FILE)\n",
+        "    with open(AL_FILE, 'a', newline='', encoding='utf-8') as f:\n",
+        "        writer = csv.writer(f)\n",
+        "        if header:\n",
+        "            writer.writerow(['url','score','reason','ts'])\n",
+        "        writer.writerows(rows)\n",
+        "    print('Appended', len(rows), 'active-learning candidates to', AL_FILE)\n",
+        "\n",
+        "# Build fused scores for all user-reported URLs (if possible)\n",
+        "try:\n",
+        "    fused_scores_all = []\n",
+        "    urls_all = []\n",
+        "    for report in user_reports_data:\n",
+        "        urls = report.get('urls') or []\n",
+        "        if not urls: continue\n",
+        "        # compute per-url AE probs and take max\n",
+        "        feats = np.stack([features_for_url(u) for u in urls if u], axis=0)\n",
+        "        feats_s = scaler.transform(feats)\n",
+        "        recon = ae_model.predict(feats_s, verbose=0)\n",
+        "        errors = np.mean((recon - feats_s)**2, axis=1)\n",
+        "        ae_prob = float(np.clip((errors - ae_threshold * 0.5) / (ae_threshold * 2), 0, 1).max())\n",
+        "        # gcn prob\n",
+        "        g = 0.5\n",
+        "        if 'post_node_map' in globals() and 'gnn_probs' in globals():\n",
+        "            idx = post_node_map.get(str(report['postId']))\n",
+        "            if idx is not None and 0 <= idx < len(gnn_probs):\n",
+        "                g = float(gnn_probs[idx])\n",
+        "        fused = 0.6 * ae_prob + 0.4 * g\n",
+        "        # record per-URL as well (use first URL)\n",
+        "        fused_scores_all.append(fused)\n",
+        "        urls_all.append(urls[0] if len(urls)>0 else None)\n",
+        "    # select borderline ones\n",
+        "    borderline_urls = [u for u,s in zip(urls_all, fused_scores_all) if u and BORDER_LOW <= s <= BORDER_HIGH]\n",
+        "    borderline_scores = [s for s in fused_scores_all if BORDER_LOW <= s <= BORDER_HIGH]\n",
+        "    if borderline_urls:\n",
+        "        add_active_candidates(borderline_urls, borderline_scores, reason='borderline_fused')\n",
+        "except Exception as e:\n",
+        "    print('Active-learning candidate extraction failed:', e)\n",
+        "\n",
+        "# --- Telemetry: save label counts + report counts ---\n",
+        "telemetry = {}\n",
+        "try:\n",
+        "    telemetry['timestamp'] = int(time.time())\n",
+        "    telemetry['num_user_reports'] = len(report_docs) if 'report_docs' in globals() else 0\n",
+        "    telemetry['num_unique_user_urls'] = int(len(df_user)) if 'df_user' in globals() and not df_user.empty else 0\n",
+        "    telemetry['label_counts'] = {}\n",
+        "    if 'df_user' in globals() and not df_user.empty:\n",
+        "        telemetry['label_counts'] = df_user['label'].value_counts().to_dict()\n",
+        "    # report types counts from report_docs\n",
+        "    if 'report_docs' in globals() and report_docs:\n",
+        "        types = [ (d.to_dict() or {}).get('type') for d in report_docs ]\n",
+        "        from collections import Counter\n",
+        "        telemetry['report_type_counts'] = dict(Counter([t for t in types if t is not None]))\n",
+        "    # Save telemetry\n",
+        "    with open('training_telemetry.json','w') as f:\n",
+        "        json.dump(telemetry, f, indent=2)\n",
+        "    print('Saved training_telemetry.json', telemetry)\n",
+        "except Exception as e:\n",
+        "    print('Telemetry capture failed:', e)\n",
+        "\n",
+        "print('Balanced fine-tune + K-fold CV + active-learning + telemetry complete.')\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Ensure `user_reports_data` exists before fusion grid-search\n",
+        "if 'user_reports_data' not in globals():\n",
+        "    user_reports_data = []\n",
+        "    # Prefer df_user if available (constructed earlier from trusted labels)\n",
+        "    if 'df_user' in globals() and not df_user.empty:\n",
+        "        for _, r in df_user.iterrows():\n",
+        "            pid = r.get('post_id') or r.get('postId') or None\n",
+        "            urls = r.get('urls') or []\n",
+        "            if isinstance(urls, str):\n",
+        "                try:\n",
+        "                    import ast\n",
+        "                    urls = ast.literal_eval(urls)\n",
+        "                except Exception:\n",
+        "                    urls = [urls]\n",
+        "            # infer label\n",
+        "            lbl = None\n",
+        "            try:\n",
+        "                if 'label' in r.index and (int(r['label']) in (0,1)):\n",
+        "                    lbl = int(r['label'])\n",
+        "                else:\n",
+        "                    typ = r.get('type') if 'type' in r.index else None\n",
+        "                    lbl = 1 if typ in ('false_negative','true_positive') else 0\n",
+        "            except Exception:\n",
+        "                lbl = 0\n",
+        "            if pid:\n",
+        "                user_reports_data.append({'postId': pid, 'true_label': int(lbl), 'urls': urls})\n",
+        "    # Fallback: use report_docs from Firestore if present\n",
+        "    elif 'report_docs' in globals() and len(report_docs) > 0:\n",
+        "        for doc in report_docs:\n",
+        "            d = doc.to_dict() or {}\n",
+        "            payload = d.get('payload') or {}\n",
+        "            postId = payload.get('postId') or payload.get('post_id') or None\n",
+        "            links = []\n",
+        "            if isinstance(payload.get('links'), list):\n",
+        "                links = list(payload.get('links'))\n",
+        "            if payload.get('url') and payload.get('url') not in links:\n",
+        "                links.append(payload.get('url'))\n",
+        "            rtype = d.get('type')\n",
+        "            true_label = 1 if (rtype in ('false_negative', 'true_positive')) else 0\n",
+        "            if postId:\n",
+        "                user_reports_data.append({'postId': postId, 'true_label': true_label, 'urls': links})\n",
+        "    else:\n",
+        "        print('No df_user or report_docs available to build user_reports_data; grid-search will be skipped.')\n",
+        "\n",
+        "print('user_reports_data length:', len(user_reports_data))\n",
+        "\n"
       ]
     },
     {
