Switch phishing URL source to direct download
Replaces cloning the Phishing.Database repository with direct download of the latest phishing links text file, as recommended by the project. Updates parsing logic to handle the new format and improves error handling for missing files.

--- a/pre_train.ipynb
+++ b/pre_train.ipynb
@@ -6,10 +6,10 @@
       "source": [
         "### **Robust Hybrid Phishing Detection Trainer (Live Datasets) v4**\n",
         "\n",
-        "This notebook implements the complete training pipeline using dynamic, real-world data sources. It clones the latest phishing URLs from the `Phishing.Database` repository and uses the Tranco Top 1 Million list for benign examples.\n",
+        "This notebook implements the complete training pipeline using dynamic, real-world data sources. It downloads the latest phishing URLs from the `Phishing.Database` project and uses the Tranco Top 1 Million list for benign examples.\n",
         "\n",
         "**Key Features & Changes:**\n",
-        "1.  **Live Data Sources:** Ingests data directly from GitHub and the Tranco list, ensuring the model is trained on current threats.\n",
+        "1.  **Live Data Sources:** Ingests data directly from the Phishing.Database project and the Tranco list, ensuring the model is trained on current threats.\n",
         "2.  **On-the-Fly Feature Extraction:** Processes raw URLs and generates lexical features directly within the notebook.\n",
         "3.  **Lexical-Only Model:** This version is trained exclusively on lexical features that can be derived from the URL string. This is a necessary adaptation as host-based features (e.g., DNS, WHOIS) from the original dataset cannot be feasibly generated in real-time for a large, dynamic dataset.\n",
         "4.  **Full Hybrid System:** Implements the complete AE + GCN training and evaluation pipeline using a robust cross-validation framework."
@@ -108,7 +108,7 @@
       "metadata": {},
       "source": [
         "#### **3. Fetch Live Phishing and Benign URL Datasets**\n",
-        "This section clones the Phishing.Database repository from GitHub and downloads the Tranco top 1 million list. These will serve as our dynamic sources for phishing and benign URLs, respectively."
+        "This section downloads the latest data files directly, as recommended by the Phishing.Database project, instead of cloning the repository."
       ]
     },
     {
@@ -117,9 +117,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Fetch Phishing URLs\n",
-        "print(\"Cloning Phishing.Database repository...\")\n",
-        "!git clone https://github.com/Phishing-Database/Phishing.Database.git\n",
+        "# Fetch Phishing URLs by direct download\n",
+        "print(\"Downloading latest active phishing links...\")\n",
+        "!wget https://phish.co.za/latest/phishing-links-ACTIVE.txt -O phishing-links-ACTIVE.txt\n",
         "\n",
         "# Fetch Benign URLs (Tranco Top 1 Million)\n",
         "print(\"\\nDownloading Tranco Top 1 Million list...\")\n",
@@ -143,20 +143,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Parse Phishing URLs from the cloned repo\n",
-        "phishing_urls = []\n",
-        "json_files = glob('Phishing.Database/phishing-links-ACTIVE-*.json')\n",
-        "print(f\"Found {len(json_files)} active phishing data files.\")\n",
-        "for file in json_files:\n",
-        "    with open(file, 'r') as f:\n",
-        "        data = json.load(f)\n",
-        "        for entry in data:\n",
-        "            if 'url' in entry:\n",
-        "                phishing_urls.append(entry['url'])\n",
-        "\n",
-        "df_phish = pd.DataFrame({'url': phishing_urls, 'label': 1})\n",
-        "df_phish.drop_duplicates(inplace=True)\n",
-        "print(f\"Parsed {len(df_phish)} unique active phishing URLs.\")\n",
+        "# Parse Phishing URLs from the downloaded text file\n",
+        "try:\n",
+        "    df_phish = pd.read_csv('phishing-links-ACTIVE.txt', header=None, names=['url'])\n",
+        "    df_phish['label'] = 1\n",
+        "    df_phish.drop_duplicates(inplace=True)\n",
+        "    print(f\"Parsed {len(df_phish)} unique active phishing URLs.\")\n",
+        "except FileNotFoundError:\n",
+        "    print(\"phishing-links-ACTIVE.txt not found. Creating an empty phishing dataframe.\")\n",
+        "    df_phish = pd.DataFrame(columns=['url', 'label'])\n",
         "\n",
         "# Parse Benign URLs from Tranco list\n",
         "df_benign_full = pd.read_csv('top-1m.csv', names=['rank', 'domain'])\n",
@@ -165,7 +160,6 @@
         "print(f\"Parsed {len(df_benign_full)} benign domains from Tranco list.\")\n",
         "\n",
         "# Sample the data to create a balanced dataset for pre-training\n",
-        "# Feature extraction on 1M+ URLs is too slow for a notebook environment.\n",
         "N_SAMPLES_BENIGN = 50000 # Using a large sample of benign URLs\n",
         "df_benign_sample = df_benign_full.sample(n=N_SAMPLES_BENIGN, random_state=SEED)\n",
         "\n",
@@ -192,7 +186,6 @@
       "outputs": [],
       "source": [
         "# Define the list of lexical features we will extract.\n",
-        "# This is based on common lexical features used in phishing detection.\n",
         "LEXICAL_FEATURE_COLUMNS = [\n",
         "    'qty_dot_url', 'qty_hyphen_url', 'qty_underline_url', 'qty_slash_url', \n",
         "    'qty_questionmark_url', 'qty_equal_url', 'qty_at_url', 'qty_and_url', \n",
@@ -207,9 +200,8 @@
         "    \"\"\"Extracts basic lexical features from a URL string.\"\"\"\n",
         "    features = {}\n",
         "    try:\n",
-        "        ext = tldextract.extract(url)\n",
+        "        ext = tldextract.extract(str(url))\n",
         "        domain = f\"{ext.domain}.{ext.suffix}\"\n",
-        "        hostname = f\"{ext.subdomain}.{domain}\" if ext.subdomain else domain\n",
         "        \n",
         "        features['qty_dot_url'] = url.count('.')\n",
         "        features['qty_hyphen_url'] = url.count('-')\n",
