Improve phishing URL file parsing in notebook
Replaced pandas read_csv with manual line-by-line reading for 'phishing-links-ACTIVE.txt' to handle file parsing more robustly and avoid issues with malformed lines.

--- a/pre_train.ipynb
+++ b/pre_train.ipynb
@@ -145,7 +145,10 @@
       "source": [
         "# Parse Phishing URLs from the downloaded text file\n",
         "try:\n",
-        "    df_phish = pd.read_csv('phishing-links-ACTIVE.txt', header=None, names=['url'])\n",
+        "    # FIXED: Use a more robust method to read the file line by line\n",
+        "    with open('phishing-links-ACTIVE.txt', 'r', encoding='utf-8') as f:\n",
+        "        phishing_urls = [line.strip() for line in f if line.strip()]\n",
+        "    df_phish = pd.DataFrame(phishing_urls, columns=['url'])\n",
         "    df_phish['label'] = 1\n",
         "    df_phish.drop_duplicates(inplace=True)\n",
         "    print(f\"Parsed {len(df_phish)} unique active phishing URLs.\")\n",
