Add thesis evaluation section and metrics reporting
Introduces a dedicated section for thesis performance evaluation, including code to assess pre-trained and final models on a public test set. Adds a function to print metrics and confusion matrices, and ensures fusion configuration values are saved as floats for consistency.

--- a/pre_train.ipynb
+++ b/pre_train.ipynb
@@ -12,7 +12,8 @@
         "1.  **Live Data Sources:** Ingests data directly from the Phishing.Database project and the Tranco list, ensuring the model is trained on current threats.\n",
         "2.  **On-the-Fly Feature Extraction:** Processes raw URLs and generates lexical features directly within the notebook.\n",
         "3.  **Lexical-Only Model:** This version is trained exclusively on lexical features that can be derived from the URL string. This is a necessary adaptation as host-based features (e.g., DNS, WHOIS) from the original dataset cannot be feasibly generated in real-time for a large, dynamic dataset.\n",
-        "4.  **Full Hybrid System:** Implements the complete AE + GCN training and evaluation pipeline using a robust cross-validation framework."
+        "4.  **Full Hybrid System:** Implements the complete AE + GCN training and evaluation pipeline using a robust cross-validation framework.\n",
+        "5.  **Thesis Evaluation:** Includes a dedicated section to evaluate the pre-trained and final models on a public test set to generate the specific metrics and confusion matrices required for the thesis."
       ]
     },
     {
@@ -145,7 +146,6 @@
       "source": [
         "# Parse Phishing URLs from the downloaded text file\n",
         "try:\n",
-        "    # FIXED: Use a more robust method to read the file line by line\n",
         "    with open('phishing-links-ACTIVE.txt', 'r', encoding='utf-8') as f:\n",
         "        phishing_urls = [line.strip() for line in f if line.strip()]\n",
         "    df_phish = pd.DataFrame(phishing_urls, columns=['url'])\n",
@@ -254,7 +254,7 @@
         "\n",
         "# --- Feature Scaling ---\n",
         "print(\"\\nFitting RobustScaler on benign public training data...\")\n",
-        "X_public_train, _, y_public_train, _ = train_test_split(\n",
+        "X_public_train, X_public_test, y_public_train, y_public_test = train_test_split(\n",
         "    X_public, y_public, test_size=0.3, random_state=SEED, stratify=y_public\n",
         ")\n",
         "scaler = RobustScaler().fit(X_public_train[y_public_train == 0])\n",
@@ -844,6 +844,84 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "--- \n",
+        "### **Part 5: Thesis Performance Evaluation**\n",
+        "\n",
+        "This section evaluates the performance of the **pre-trained baseline model** and the **final fine-tuned hybrid model** on the held-out public test set, as required for the thesis."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def print_thesis_stats(model_name, y_true, y_pred, y_prob=None):\n",
+        "    \"\"\"Prints evaluation statistics formatted for the thesis.\"\"\"\n",
+        "    accuracy = accuracy_score(y_true, y_pred)\n",
+        "    precision = precision_score(y_true, y_pred, zero_division=0)\n",
+        "    recall = recall_score(y_true, y_pred, zero_division=0)\n",
+        "    f1 = f1_score(y_true, y_pred, zero_division=0)\n",
+        "    cm = confusion_matrix(y_true, y_pred)\n",
+        "    \n",
+        "    print(f\"\\n--- {model_name} Performance ---\")\n",
+        "    print(f\"| Metric    | Score    |\")\n",
+        "    print(f\"| :-------- | :------- |\")\n",
+        "    print(f\"| Accuracy  | {accuracy:.4f}   |\")\n",
+        "    print(f\"| Precision | {precision:.4f}   |\")\n",
+        "    print(f\"| Recall    | {recall:.4f}   |\")\n",
+        "    print(f\"| F1-Score  | {f1:.4f}   |\")\n",
+        "    if y_prob is not None and len(np.unique(y_true)) > 1:\n",
+        "        roc_auc = roc_auc_score(y_true, y_prob)\n",
+        "        print(f\"| ROC-AUC   | {roc_auc:.4f}   |\")\n",
+        "        \n",
+        "    print(f\"\\nConfusion Matrix for {model_name}:\")\n",
+        "    print(cm)\n",
+        "    # Plotting the confusion matrix\n",
+        "    plt.figure(figsize=(6, 5))\n",
+        "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', \n",
+        "                xticklabels=['Predicted Benign', 'Predicted Phishing'], \n",
+        "                yticklabels=['True Benign', 'True Phishing'])\n",
+        "    plt.title(f'Confusion Matrix: {model_name}')\n",
+        "    plt.xlabel('Predicted Label')\n",
+        "    plt.ylabel('True Label')\n",
+        "    plt.show()\n",
+        "\n",
+        "# --- 1. Evaluate Pre-trained Autoencoder (Baseline) ---\n",
+        "X_public_test_scaled = scaler.transform(X_public_test)\n",
+        "baseline_reconstructed = pretrain_ae_model.predict(X_public_test_scaled, verbose=0)\n",
+        "baseline_errors = np.mean(np.square(X_public_test_scaled - baseline_reconstructed), axis=1)\n",
+        "\n",
+        "# Use a simple percentile threshold for the baseline model as per the original thesis approach\n",
+        "X_benign_public_train_scaled = scaler.transform(X_public_train[y_public_train == 0])\n",
+        "baseline_train_reconstructed = pretrain_ae_model.predict(X_benign_public_train_scaled, verbose=0)\n",
+        "baseline_train_errors = np.mean(np.square(X_benign_public_train_scaled - baseline_train_reconstructed), axis=1)\n",
+        "baseline_threshold = np.percentile(baseline_train_errors, 99) # High precision threshold\n",
+        "baseline_preds = (baseline_errors > baseline_threshold).astype(int)\n",
+        "\n",
+        "print_thesis_stats(\"Pre-trained Autoencoder (Baseline)\", y_public_test, baseline_preds)\n",
+        "\n",
+        "# --- 2. Evaluate Final Fine-Tuned Hybrid Model ---\n",
+        "if len(X_user) > 0:\n",
+        "    final_ae_errors = final_ae_model.predict(X_public_test_scaled, verbose=0)\n",
+        "    final_ae_errors = np.mean(np.square(X_public_test_scaled - final_ae_errors), axis=1)\n",
+        "    final_ae_probs = final_ae_errors / (final_threshold + 1e-9)\n",
+        "    \n",
+        "    # For public data, GCN score is neutral as these posts are not in the user graph\n",
+        "    final_gcn_probs = np.full_like(final_ae_probs, 0.5)\n",
+        "    \n",
+        "    final_fused_scores = final_fusion_weight * final_ae_probs + (1 - final_fusion_weight) * final_gcn_probs\n",
+        "    final_hybrid_preds = (final_fused_scores > 0.5).astype(int)\n",
+        "    \n",
+        "    print_thesis_stats(\"Final Hybrid Model\", y_public_test, final_hybrid_preds, y_prob=final_fused_scores)\n",
+        "else:\n",
+        "    print(\"\\nSkipping final hybrid model evaluation as no user data was available for fine-tuning.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "#### **11. Export Artifacts for Application**\n",
         "Finally, we save all the essential artifacts required by your backend application."
       ]
@@ -878,8 +956,8 @@
         "\n",
         "# 3. Save fusion configuration\n",
         "fusion_config = {\n",
-        "    'ae_threshold': final_threshold,\n",
-        "    'fusion_weight_ae': final_fusion_weight\n",
+        "    'ae_threshold': float(final_threshold),\n",
+        "    'fusion_weight_ae': float(final_fusion_weight)\n",
         "}\n",
         "with open(\"fusion_config.json\", \"w\") as f:\n",
         "    json.dump(fusion_config, f)\n",
