Improve feature extraction and reporting logic
Updated app.py to use explicit feature names for legacy scaler compatibility and handle feature count mismatches. Enhanced content_script.js to provide inline notifications and improved UI feedback for phishing and false positive reports. Modified pre_train.ipynb to ensure consistent DataFrame usage, save scaler and GCN probabilities, and update artifact handling for downstream use.

--- a/pre_train.ipynb
+++ b/pre_train.ipynb
@@ -254,12 +254,15 @@
         "\n",
         "# --- Feature Scaling ---\n",
         "print(\"\\nFitting RobustScaler on benign public training data...\")\n",
+        "X_public_train_df = pd.DataFrame(X_public, columns=LEXICAL_FEATURE_COLUMNS)\n",
         "X_public_train, X_public_test, y_public_train, y_public_test = train_test_split(\n",
-        "    X_public, y_public, test_size=0.3, random_state=SEED, stratify=y_public\n",
+        "    X_public_train_df, y_public, test_size=0.3, random_state=SEED, stratify=y_public\n",
         ")\n",
         "scaler = RobustScaler().fit(X_public_train[y_public_train == 0])\n",
         "\n",
-        "print(\"✅ Scaler fitted.\")"
+        "print(\"✅ Scaler fitted and saved.\")\n",
+        "with open(\"scaler.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(scaler, f)"
       ]
     },
     {
@@ -831,13 +834,22 @@
         "            loss.backward()\n",
         "            optimizer.step()\n",
         "        print(\"\\n✅ Final GCN model training complete.\")\n",
+        "        \n",
+        "        # Generate final probabilities for all nodes\n",
+        "        final_gcn_model.eval()\n",
+        "        with torch.no_grad():\n",
+        "            final_all_node_logits = final_gcn_model(final_graph_data)\n",
+        "            final_all_node_probs = final_all_node_logits.exp()[:, 1].cpu().numpy()\n",
+        "        print(\"Generated final GCN probabilities for all nodes.\")\n",
         "    else:\n",
         "        print(\"No user data to train final GCN model.\")\n",
         "        final_gcn_model = None\n",
+        "        final_all_node_probs = np.array([])\n",
         "else:\n",
         "    print(\"\\nNo user data. The final models will be the pre-trained public models.\")\n",
         "    final_ae_model = pretrain_ae_model\n",
-        "    final_gcn_model = None"
+        "    final_gcn_model = None\n",
+        "    final_all_node_probs = np.array([])"
       ]
     },
     {
@@ -893,7 +905,7 @@
         "baseline_errors = np.mean(np.square(X_public_test_scaled - baseline_reconstructed), axis=1)\n",
         "\n",
         "# Use a simple percentile threshold for the baseline model as per the original thesis approach\n",
-        "X_benign_public_train_scaled = scaler.transform(X_public_train[y_public_train == 0])\n",
+        "X_benign_public_train_scaled = scaler.transform(X_public_train)\n",
         "baseline_train_reconstructed = pretrain_ae_model.predict(X_benign_public_train_scaled, verbose=0)\n",
         "baseline_train_errors = np.mean(np.square(X_benign_public_train_scaled - baseline_train_reconstructed), axis=1)\n",
         "baseline_threshold = np.percentile(baseline_train_errors, 99) # High precision threshold\n",
@@ -953,6 +965,10 @@
         "    with open(\"post_node_map.json\", \"w\") as f:\n",
         "        json.dump(post_id_to_node_idx, f)\n",
         "    print(\"Saved post_node_map.json\")\n",
+        "    # Save the final GCN probabilities\n",
+        "    if 'final_all_node_probs' in locals() and final_all_node_probs.size > 0:\n",
+        "        np.save(\"gnn_probs.npy\", final_all_node_probs)\n",
+        "        print(\"Saved gnn_probs.npy\")\n",
         "\n",
         "# 3. Save fusion configuration\n",
         "fusion_config = {\n",
@@ -987,7 +1003,8 @@
         "    \"autoencoder_threshold.txt\",\n",
         "    \"gnn_model.pth\",\n",
         "    \"post_node_map.json\",\n",
-        "    \"fusion_config.json\"\n",
+        "    \"fusion_config.json\",\n",
+        "    \"gnn_probs.npy\"\n",
         "]\n",
         "\n",
         "for artifact in artifacts_to_download:\n",
